css/main.css
/* A modified default Jekyll theme
/*
/* Improvements include:
/*
/* 1. Responsive Template: Added media-queries so that it works well
/*    on a wide-range of screens.
/*
/* (Slightly modified further by Kevin Purdy (github.com/kevinpurdy), mostly with custom needs and Typeplate tweaks)

The MIT License (MIT)

Copyright (c) 2013 Kashyap

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.


/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #fcfcfc;
  font-size: 120%;
  font-family: 'Merriweather', Georgia, serif;
  font-weight: 400;
  line-height: 1.6;
  padding: 0 2em;
  text-rendering: optimizeLegibility;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -o-hyphens: auto;
  hyphens: auto;
  word-wrap: break-word;
  color: #38313b;
}

h1, h2, h3, h4, h5, h6 {
  color: #38313b;
  font-family: 'Oswald', 'Helvetica Neue', sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  text-rendering: optimizeLegibility;
}

h1 {
  font-size: 300%;
  margin-top: 1em;
  margin-bottom: 0.5em;
  line-height: 1.4em;
}

h2 {
  font-size: 200%;
  margin-top: 1em;
  margin-bottom: 0.5em;
  line-height: 1.4em;
}

h3 {
  font-size: 150%;
  margin-top: 3.5em;
  margin-bottom: 0.5em;
  line-height: 1.4em;
}

p { margin-bottom: 1.5em;}

a         { color: #0058a1; }
a:hover   { color: #1b202e; }
a:visited { color: #5b2b61; }


blockquote {
  padding: 0.1em 1.3em;
  background: #fafafa;
  border-left: 5px #81E26D solid;
  color: #666;
}

hr {
  border: 1px solid;
  color: #8f9a9c;
  background-color: #8f9a9c;
  margin-top: 2em;
  margin-bottom: 2em;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  margin: auto;
  max-width: 33.875em;
  padding: 0 1em;
#  color: #111;
}

div.header {
  margin-bottom: 2em;
  word-wrap: normal;
}

.site .header a {
  font-weight: bold;
  text-decoration: none;
  font-family: 'Oswald', 'Helvetica Neue', sans-serif;
  text-transform: uppercase;
}

.site .header h1.title {
#  display: inline-block;
  font-size: 300%;
}

.site .header h1.title a {
  color: #f05a35;
  font-weight: 400;
  text-transform: uppercase;
}

.site .header h1.title a:hover {
  color: #000;
}

.site .header a.extra {
  color: #686169;
  margin-left: 1em;
  font-weight: 400;
  font-size: 110%;
}

.site .header a.extra_first {
  color: #686169;
  margin-left: 0em;
  font-weight: 400;
  font-size: 110%;
}

.site .header a.extra:hover {
  color: #000;
}

.site .meta {
  color: #aaa;
}

.site .footer {
  font-size: 80%;
  color: #655f66;
  border-top: 4px solid #8f9a9c;
  margin-top: 2em;
  overflow: hidden;
  word-wrap: normal;
}

.site .footer .contact {
  float: left;
  margin-right: 3em;
  margin-top: 2em;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}

pre {
  font-family: Consolas, "Inconsolata", "Courier New", monospace;
  overflow: auto;
  margin: 1em auto;
}

code {
  font-family: Consolas, "Inconsolata", "Courier New", monospace;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
  margin-bottom: 1em;
}

ul.posts span {
  color: #616678;
  font-family: 'Merriweather', serif;
  font-size: 80%;
  display: list-item;
}

div.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

div.posts span {
  color: #616678;
  font-family: 'Merriweather', serif;
  font-size: 80%;
  line-height: 1.75em;
}

div.posts img {
  max-width:50%;
  margin: 10px; 
}

div.posts p {
  margin: 0;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  line-height: 1em;
  padding: 0.2em 0.5em;
}

.post img {
  max-width: 100%;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  font-size: 0.7em;

}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

.post {
  text-align: justify;
}

.post img {
  max-width: 100%;
}

/************************************************************************/
/*    Media Queries
/*
/************************************************************************/




@media screen and (max-width: 1000px) {
  body {
    font-size: 120%;
    padding: 0 4em;
  }
  .post code {
    font-size: 80%;
  }
}

@media screen and (max-width: 800px) {
  body {
    font-size: 110%;
    padding: 0 1.5em;
  }

}


@media screen and (max-width: 500px) {
  body {
    font-size: 110%;
    padding: 0 0.5em;
  }

  .footer {
    text-align: center;
    padding: 1em;
  }

  .contact {
    width: 100%;
  }
}

@media screen and (max-width: 320px) {
  body {
    font-size: 110%;
    padding: 0;
  }
}

